# bunnyos

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  build.ps1  build.sh  start.sh
.cargo/: config.toml
.github/: FUNDING.yml
bootloader/: Cargo.toml  build.rs
bootloader/src/: main.rs
common/: Cargo.toml
common/src/: fs.rs  lib.rs  parser.rs
demo/: Cargo.toml
demo/src/: main.rs
firmware/: OVMF_CODE.fd  OVMF_VARS.fd
init/: Cargo.toml
kernel/: Cargo.toml
kernel/src/: main.rs
os/: Cargo.toml
os/.cargo/: config.toml
os/libs/common/: Cargo.toml
os/libs/common/src/: fs.rs  lib.rs
os/libs/std/: Cargo.toml  TODO.txt
os/libs/std-entry/: Cargo.toml
os/libs/std-entry/src/: lib.rs
os/libs/std/src/: lib.rs  macros.rs  prelude.rs
os/programs/command-interpreter/: Cargo.toml
os/programs/command-interpreter/src/: main.rs
os/programs/demo/: Cargo.toml
os/programs/demo/src/: main.rs
os/programs/sh/: Cargo.toml
os/programs/sh/src/: main.rs
os/system/bootloader/: Cargo.toml
os/system/bootloader/src/: main.rs
os/system/init/: Cargo.toml
os/system/kernel/: Cargo.toml
programs/sh/: Cargo.toml
shell/: Cargo.toml
std-entry/: Cargo.toml
std-entry/src/: lib.rs
std/src/: lib.rs  prelude.rs
system/bootloader/: Cargo.toml
system/init/src/: main.rs
tools/: Cargo.toml
tools/mkbelf/: Cargo.toml
tools/mkbelf/src/: lib.rs
tools/mkbimg/: Cargo.toml
tools/mkbimg/src/: main.rs
tools/mkrelf/: Cargo.toml
tools/mkrelf/src/: lib.rs
tools/mkrimg/: Cargo.toml
tools/mkrimg/src/: main.rs
(+2 files in other folders)
