[package]
name = "shell"
version = "0.1.0"
edition = "2021"

[dependencies]
uefi = { version = "0.28.0", features = ["alloc"] }
uefi-services = { version = "0.25.0", features = [], default-features = false }
log = "0.4.21"
build-info = { version = "0.0.36", default-features = false }
bunnyos-common = { path = "../common" }

[build-dependencies]
build-info-build = "0.0.36"
